devops-platform/platform/dozzle/dozzle-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dozzle-ingress
  namespace: dozzle
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-cache: "off"
spec:
  ingressClassName: nginx
  rules:
    - host: dozzle.chosuncnl.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dozzle-service
                port:
                  number: 8080
